--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <ul class="nav navbar-nav navbar-right nav_list">
               <li><a href="#signup" data-toggle="modal" data-target="#signup">Sign Up</a></li>
-              <li><a href="">Login</a></li>
+              <li><a href="#signin" data-toggle="modal" data-target="#signin">Login</a></li>
             </ul>
           </div>
         </div>
@@ -78,14 +78,58 @@
 
 
                 </div>
-              <div class="modal-footer">
-                  <p class="text-center">Already have an account? <a href="">Login</a></p>
+
+
               </div>
+            </div>
+        </div><!-- end of sign up modal -->
+
+
+        <div id="signin" class="modal" tabindex="-1" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+
+              <div class="modal-header">
+                <button type="button" id="close" class="close" data-dismiss="modal">&times;</button>
+                  <h3 class="modal-title">Sign In</h3>
+              </div>
+
+              <div class="modal-body">
+                  <div class="row">
+
+                    <form id="signin-form">
+
+                      <div class="row form-group">
+                        <span class="errorEmail"></span>
+                        <div class="col-sm-12">
+                          <input type="text" name="email" class="form-control" placeholder="Email">
+                        </div>
+                      </div>
+
+                      <div class="row form-group">
+                        <span class="errorPassword"></span>
+                        <div class="col-sm-12">
+                          <input type="password" name="password" class="form-control" placeholder="Password">
+                        </div>
+                      </div>
+
+                      <div class="row form-group">
+                        <div class="col-sm-12">
+                          <button type='submit' class="form-control btn btn-primary"> Sign In</button>
+                        </div>
+                      </div>
+
+                    </form>
+
+                  </div>
+
+
+                </div>
 
               </div>
             </div>
         </div>
-
+<!-- end of sign in modal -->
       </div>
     </body>
 </html>
