--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <ul class="nav navbar-nav navbar-right nav_list">
               <li><a href="#signup" data-toggle="modal" data-target="#signup">Sign Up</a></li>
               <li><a href="#signin" data-toggle="modal" data-target="#signin">Login</a></li>
+              <li id='signout'>Log Out </li>
             </ul>
           </div>
         </div>
